re-writes build.gradle

--- a/build.gradle
+++ b/build.gradle
@@ -22,4 +22,4 @@ dependencies {
 
 applicationName = "atse-app"
 mainClassName = 'App'
-task stage(dependsOn: ['clean', 'installDist'])
+task stage(dependsOn: ['clean', 'installApp'])
